<resources>
    <string name="app_name">Lesson1</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="before_yesterday">Before Yesterday</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="settings_tittle">Settings</string>
    <string name="dark_mode">Night theme</string>
    <string name="Settings">Settings</string>
    <string name="Mars">Mars</string>
    <string name="Home">Home</string>
    <string name="next_button">Next Cam</string>
    <string name="button">Previous Cam</string>
    <string name="Photo_number"> Photo №: </string>
    <string name="mars_exploration_rovers">MARS Exploration Rovers</string>
    <string name="latest_photos_from_mars_rovers">Latest photos from Mars Rovers</string>
    <string name="date">Date</string>
    <string name="photo_32">Photo №: 32</string>
    <string name="rover_camera">Rover Camera</string>

</resources>